Fixed addition to config group
